--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -19,7 +19,7 @@
         <audio controls>
                 <source src="audio.mp3" type="audio/mpeg">
         </audio>
-        <iframe width="600" height="400" frameborder="0" class="rssdog" src="https://www.rssdog.com/index.php?url=http%3A%2F%2Ffeeds.bbci.co.uk%2Fnews%2Fworld%2Frss.xml&mode=html&showonly=&maxitems=0&showdescs=0&desctrim=0&descmax=0&tabwidth=100%25&linktarget=_blank&textsize=inherit&bordercol=%23d4d0c8&headbgcol=%23999999&headtxtcol=%23ffffff&titlebgcol=%23f1eded&titletxtcol=%23000000&itembgcol=%23ffffff&itemtxtcol=%23000000&ctl=0"></iframe>
+        <iframe width="600" height="400" frameborder="0" src="https://www.rssdog.com/index.php?url=http%3A%2F%2Ffeeds.bbci.co.uk%2Fnews%2Fworld%2Frss.xml&mode=html&showonly=&maxitems=0&showdescs=0&desctrim=0&descmax=0&tabwidth=100%25&linktarget=_blank&textsize=inherit&bordercol=%23d4d0c8&headbgcol=%23999999&headtxtcol=%23ffffff&titlebgcol=%23f1eded&titletxtcol=%23000000&itembgcol=%23ffffff&itemtxtcol=%23000000&ctl=0"></iframe>
         <p></p>
         <object width="300" height="400" data="pdf.pdf"></object>
     </body>
